--- a/app/src/main/res/layout/fragment_character_grid.xml
+++ b/app/src/main/res/layout/fragment_character_grid.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.CharacterFragment">
+    tools:context=".views.CharacterGridFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerViewCharacters"/>
+        android:id="@+id/recyclerViewCharactersGrid"/>
 
 </FrameLayout>
