--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:title="Characters" android:id="@+id/action_music" android:icon="@drawable/ic_baseline_person_pin_24"/>
-    <item android:title="Houses" android:id="@+id/action_films" android:icon="@drawable/ic_baseline_house_siding_24"/>
-    <item android:title="Quiz" android:id="@+id/action_books" android:icon="@drawable/ic_baseline_celebration_24"/>
-
+    <item android:title="@string/characters" android:id="@+id/charactersNav" android:icon="@drawable/ic_baseline_person_pin_24"/>
+    <item android:title="@string/houses" android:id="@+id/housesNav" android:icon="@drawable/ic_baseline_house_siding_24"/>
+    <item android:title="@string/quiz" android:id="@+id/quizNav" android:icon="@drawable/ic_baseline_celebration_24"/>
 </menu>
